--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-  <html>
+<head>
+    <title>skiess1 webpage</title>
+</head>  
+
+<html>
     <body>  
      Hello There, Awesome Person!
     </body> 
